force-app/main/default/objects/Hotel_Booked_Info__c/Hotel_Booked_Info__c.object-meta.xml
<CustomObject>
    <label>Hotel Booked Info</label>
    <nameField>
        <label>Hotel Booked Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Booked Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>