force-app/main/default/objects/Hotel_Booked_Info__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Arrange Hotel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>洲际酒店 InterContinental</fullName>
            </value>
            <value>
                <fullName>斯堪迪克酒店 Scandic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>