force-app/main/default/objects/Hotel_Booked_Info__c/fields/Booked_Hotel_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Booked_Hotel_Name_EN__c</fullName>
    <formula>Exhibition_Arrangement__r.Hotel_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Hotel Name EN</label>
    <type>Text</type>
</CustomField>