force-app/main/default/objects/Hotel_Booked_Info__c/fields/Exhibition_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Hotel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Exhibition_Hotel__c.HotelType__c</field>
            <operation>equals</operation>
            <value>Exhibition  Hotel</value>
        </filterItems>
        <filterItems>
            <field>Exhibition_Hotel__c.Exhibition_Management__r.Name</field>
            <operation>contains</operation>
            <value>137</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exhibition_Hotel__c</referenceTo>
    <relationshipLabel>Hotel Booked Infos</relationshipLabel>
    <relationshipName>Hotel_Booked_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>