force-app/main/default/objects/Hotel_Booked_Info__c/fields/Guest_Company__c.field-meta.xml
<CustomField>
    <fullName>Guest_Company__c</fullName>
    <formula>Residents__r.Company_Abbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Company</label>
    <type>Text</type>
</CustomField>