force-app/main/default/objects/Hotel_Booked_Info__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <formula>Residents__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Email</label>
    <type>Text</type>
</CustomField>