force-app/main/default/objects/Hotel_Booked_Info__c/fields/Guest_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Guest_Mobile__c</fullName>
    <formula>Residents__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Mobile</label>
    <type>Text</type>
</CustomField>