force-app/main/default/objects/Hotel_Booked_Info__c/fields/Guest_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name_CN__c</fullName>
    <formula>Residents__r.Name_CN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Name CN</label>
    <type>Text</type>
</CustomField>