force-app/main/default/objects/Hotel_Booked_Info__c/fields/Guest_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name_EN__c</fullName>
    <formula>Residents__r.Name_EN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Name EN</label>
    <type>Text</type>
</CustomField>