force-app/main/default/objects/Hotel_Booked_Info__c/fields/Guest_Organization_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Guest_Organization_Abbr__c</fullName>
    <formula>Residents__r.Organization_Abbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Organization Abbr</label>
    <type>Text</type>
</CustomField>