force-app/main/default/objects/Hotel_Booked_Info__c/fields/Guest_Resident_City__c.field-meta.xml
<CustomField>
    <fullName>Guest_Resident_City__c</fullName>
    <formula>TEXT(Residents__r.Your_Resident_city__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Resident City</label>
    <type>Text</type>
</CustomField>