force-app/main/default/objects/Hotel_Booked_Info__c/fields/In_Hotel_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Hotel_Date__c</fullName>
    <description>入住天</description>
    <label>In Hotel Date</label>
    <type>Date</type>
</CustomField>