force-app/main/default/objects/Hotel_Booked_Info__c/fields/Internal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Internal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RoomMate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Internal_Registration__c.Exhibition_Id__r.TitleEN__c</field>
            <operation>contains</operation>
            <value>2026</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Hotel Booked Infos</relationshipLabel>
    <relationshipName>Hotel_Booked_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>