force-app/main/default/objects/Hotel_Booked_Info__c/fields/Is_Apply__c.field-meta.xml
<CustomField>
    <fullName>Is_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Apply</label>
    <type>Checkbox</type>
</CustomField>