force-app/main/default/objects/Hotel_Booked_Info__c/fields/Is_Arranged__c.field-meta.xml
<CustomField>
    <fullName>Is_Arranged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否已经预定</description>
    <label>Is Arranged</label>
    <type>Checkbox</type>
</CustomField>