force-app/main/default/objects/Hotel_Booked_Info__c/fields/Is_Verify__c.field-meta.xml
<CustomField>
    <fullName>Is_Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>全量</description>
    <label>Is Verify</label>
    <type>Checkbox</type>
</CustomField>