force-app/main/default/objects/Hotel_Booked_Info__c/fields/Is_Warn__c.field-meta.xml
<CustomField>
    <fullName>Is_Warn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>通知（apply为false）</description>
    <label>Is Warn</label>
    <type>Checkbox</type>
</CustomField>