force-app/main/default/objects/Hotel_Booked_Info__c/fields/Length_Of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_Of_Stay__c</fullName>
    <formula>IF(
    AND(
        NOT(ISNULL(In_Hotel_Date__c)),
        NOT(ISNULL(Out_Hotel_Date__c))
    ),
    ABS(Out_Hotel_Date__c - In_Hotel_Date__c),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length Of Stay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>