force-app/main/default/objects/Hotel_Booked_Info__c/fields/Need_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Need_Hotel__c</fullName>
    <label>Need Hotel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>