force-app/main/default/objects/Hotel_Booked_Info__c/fields/Out_Hotel_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_Hotel_Date__c</fullName>
    <label>Out Hotel Date</label>
    <type>Date</type>
</CustomField>