force-app/main/default/objects/Hotel_Booked_Info__c/fields/Residents__c.field-meta.xml
<CustomField>
    <fullName>Residents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residents</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Hotel Booked Infos (Residents)</relationshipLabel>
    <relationshipName>Hotel_Booked_Infos1</relationshipName>
    <type>Lookup</type>
</CustomField>