force-app/main/default/objects/Hotel_Booked_Info__c/fields/Room_Gender__c.field-meta.xml
<CustomField>
    <fullName>Room_Gender__c</fullName>
    <label>Room Gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>