force-app/main/default/objects/Hotel_Booked_Info__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <label>Room No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>