force-app/main/default/objects/Hotel_Booked_Info__c/fields/RoomMate_In__c.field-meta.xml
<CustomField>
    <fullName>RoomMate_In__c</fullName>
    <formula>Internal_Registration__r.In_Hotel_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RoomMate In</label>
    <type>Date</type>
</CustomField>