force-app/main/default/objects/Hotel_Booked_Info__c/fields/RoomMate_Out__c.field-meta.xml
<CustomField>
    <fullName>RoomMate_Out__c</fullName>
    <formula>Internal_Registration__r.Out_Hotel_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RoomMate Out</label>
    <type>Date</type>
</CustomField>