force-app/main/default/objects/Hotel_Booked_Info__c/fields/RoomMate_XHN__c.field-meta.xml
<CustomField>
    <fullName>RoomMate_XHN__c</fullName>
    <formula>Internal_Registration__r.XHNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RoomMate XHN</label>
    <type>Text</type>
</CustomField>