force-app/main/default/objects/Hotel_Booked_Info__c/fields/SelfHotel__c.field-meta.xml
<CustomField>
    <fullName>SelfHotel__c</fullName>
    <label>SelfHotel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>套房Suite</fullName>
            </value>
            <value>
                <fullName>大床房King-size Bedroom</fullName>
            </value>
            <value>
                <fullName>双床房Twin-beds room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>