force-app/main/default/objects/Hotel_Booked_Info__c/fields/XHNumber__c.field-meta.xml
<CustomField>
    <fullName>XHNumber__c</fullName>
    <formula>Residents__r.XHNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XHNumber</label>
    <type>Text</type>
</CustomField>