force-app/main/default/objects/Hotel_Booked_Info__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Exhibition_Hotel__c</columns>
    <columns>Exhibition_Arrangement__c</columns>
    <columns>Hotel_Name_CN__c</columns>
    <columns>Hotel_Name_EN__c</columns>
    <columns>If_Cancel__c</columns>
    <columns>In_Hotel_Date__c</columns>
    <columns>Internal_Registration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoName__c</field>
        <operation>contains</operation>
        <value>136</value>
    </filters>
    <label>136CantonFairHotelInfo</label>
</ListView>