force-app/main/default/objects/Hotel_Booked_Info__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>Guest_Name_EN__c</columns>
    <columns>Guest_Name__c</columns>
    <columns>Guest_Email__c</columns>
    <columns>Gender__c</columns>
    <columns>Need_Hotel__c</columns>
    <columns>In_Hotel_Date__c</columns>
    <columns>Out_Hotel_Date__c</columns>
    <columns>Internal_Registration__c</columns>
    <columns>RoomMate_Name__c</columns>
    <columns>SelfHotel__c</columns>
    <columns>Book__c</columns>
    <columns>Guest_Company__c</columns>
    <columns>Guest_Position__c</columns>
    <columns>Guest_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>