force-app/main/default/objects/Hotel_Booked_Info__c/listViews/X138th.listView-meta.xml
<ListView>
    <fullName>X138th</fullName>
    <columns>NAME</columns>
    <columns>Guest_Name_CN__c</columns>
    <columns>Need_Hotel__c</columns>
    <columns>Book__c</columns>
    <columns>Internal_Registration__c</columns>
    <columns>RoomMate_Name__c</columns>
    <columns>In_Hotel_Date__c</columns>
    <columns>Out_Hotel_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>138</value>
    </filters>
    <label>138th</label>
</ListView>