force-app/main/default/objects/Hotel_Booked_Info__c/listViews/X2025IFA.listView-meta.xml
<ListView>
    <fullName>X2025IFA</fullName>
    <columns>Guest_Name_EN__c</columns>
    <columns>Guest_Name_CN__c</columns>
    <columns>Gender__c</columns>
    <columns>SelfHotel__c</columns>
    <columns>Internal_Registration__c</columns>
    <columns>RoomMate_Name__c</columns>
    <columns>Book__c</columns>
    <columns>Is_Arranged__c</columns>
    <columns>In_Hotel_Date__c</columns>
    <columns>Out_Hotel_Date__c</columns>
    <columns>Guest_Company__c</columns>
    <columns>Need_Hotel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>equals</operation>
        <value>2025IFA</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>审批通过</value>
    </filters>
    <filters>
        <field>Need_Hotel__c</field>
        <operation>notEqual</operation>
        <value>false</value>
    </filters>
    <label>2025IFA</label>
</ListView>